++Toppings Index and js file, updated layout

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -33,8 +33,11 @@
                                 Admin
                             </a>
                             <div class="dropdown-menu bg-primary">
-                                <a class="dropdown-item text-white" asp-page="/Admin/Category/Index">Add Categories</a>                            
+                                <a class="dropdown-item text-white" asp-page="/Admin/Category/Index">Add Categories</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/Toppings/Index">Add Toppings</a>
                             </div>
+                           
+                    
                         </li>
                     </ul>
                 </div>
