++Toppings,ToppingType(Upsert,js,Indexes)++ToppingsVM. Updated UI

--- a/PizzaPros/PizzaPros/Pages/Admin/Category/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Category/Upsert.cshtml
@@ -21,7 +21,7 @@
                         <label asp-for="CategoryObj.Name"></label>
                     </div>
                     <div class="col-9">
-                        <input class="form-control" asp-for="CategoryObj.Name" />
+                        <input class="form-control text-lowercase" asp-for="CategoryObj.Name" />
                         <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
                     </div>
                 </div>
