--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             <div class="dropdown-menu bg-primary">
                                 <a class="dropdown-item text-white" asp-page="/Admin/Category/Index">Add Categories</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/Toppings/Index">Add Toppings</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/ToppingType/Index">Add Topping Types</a>
                             </div>
                            
                     
