--- a/PizzaPros/PizzaPros/Pages/Admin/ToppingType/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/ToppingType/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
-@model PizzaPros.Pages.Admin.Category.IndexModel
 
 
 
 <div class="border backgroundWhite container">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary font-weight-light">Category List</h2>
+            <h2 class="text-primary font-weight-light">Topping Type List</h2>
         </div>
         <div class="col-6 text-right">
             <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
@@ -16,8 +15,7 @@
     <table id="DT-load" class="table table-striped table-bordered text-capitalize" style="width:100%">
         <thead>
             <tr>
-                <th>Category Name</th>
-                <th>Display Order</th>
+                <th>Type of Topping</th>
                 <th></th>
             </tr>
         </thead>
@@ -25,5 +23,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/category.js"></script>
+    <script src="~/js/toppingType.js"></script>
 }
