--- a/PizzaPros/PizzaPros/Pages/Admin/Toppings/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Toppings/Index.cshtml
@@ -11,7 +11,7 @@
         </div>
     </div>
     <br />
-    <table id="DT-load" class="table table-striped table-bordered" style="width:100%">
+    <table id="DT-load" class="table table-striped table-bordered text-capitalize" style="width:100%">
         <thead>
             <tr>
                 <th>Snack Type</th>
