++CrustFlavorList Index and table

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                                 <a class="dropdown-item text-white" asp-page="/Admin/Category/Index">Add Categories</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/Toppings/Index">Add Toppings</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/ToppingType/Index">Add Topping Types</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/CrustFlavor/Index">Add Crust Flavors</a>
                             </div>
                            
                     
