++Crust Flavor Upsert page. Added js to address text formatting for database

--- a/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Index.cshtml
@@ -11,10 +11,11 @@
         </div>
     </div>
     <br />
-    <table id="DT-load" class="table table-striped table-bordered text-capitalize" style="width:100%">
+    <table id="DT-load" class="table table-striped table-bordered " style="width:100%">
         <thead>
             <tr>
                 <th>Crust Flavor</th>
+                <th>Description</th>
                 <th></th>
             </tr>
         </thead>
