--- a/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Upsert.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
-@model PizzaPros.Pages.Admin.Category.UpsertModel
+@model PizzaPros.Pages.Admin.CrustFlavor.UpsertModel
+@{
+}
 
 
 
@@ -7,31 +9,31 @@
     <div class="container">
         <div class="row px-2 mx-2 backgroundWhite border">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @if (Model.CategoryObj.Id != 0)
+            @if (Model.PizzaCrustFlavorObj.Id != 0)
             {
-                <input type="hidden" asp-for="CategoryObj.Id" />
+                <input type="hidden" asp-for="PizzaCrustFlavorObj.Id" />
             }
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary font-weight-light">@(Model.CategoryObj.Id!=0 ? "Update " : "Create ")Category</h2>
+                <h2 class="text-primary font-weight-light">@(Model.PizzaCrustFlavorObj.Id!=0 ? "Update " : "Create ")Snack Type</h2>
             </div>
 
             <div class="col-8 pt-3">
                 <div class="form-group row">
                     <div class="col-3">
-                        <label asp-for="CategoryObj.Name"></label>
+                        <label asp-for="PizzaCrustFlavorObj.CrustFlavor"></label>
                     </div>
                     <div class="col-9">
-                        <input class="form-control" onkeyup="this.value = this.value.toLowerCase();"  asp-for="CategoryObj.Name" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
+                        <input class="form-control text-lowercase" onkeyup="this.value = this.value.toLowerCase();" asp-for="PizzaCrustFlavorObj.CrustFlavor" />
+                        <span class="text-danger" asp-validation-for="PizzaCrustFlavorObj.CrustFlavor"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-3">
-                        <label asp-for="CategoryObj.DisplayOrder"></label>
+                        <label asp-for="PizzaCrustFlavorObj.CrustFlavorDescription"></label>
                     </div>
                     <div class="col-9">
-                        <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
+                        <input class="form-control" onkeyup="this.value = this.value.toLowerCase();" asp-for="PizzaCrustFlavorObj.CrustFlavorDescription" />
+                        <span class="text-danger" asp-validation-for="PizzaCrustFlavorObj.CrustFlavorDescription"></span>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -39,7 +41,7 @@
                     <div class="col-9 offset-3">
                         <div class="row">
                             <div class="col-6">
-                                <button type="submit" class="btn btn-primary form-control">@(Model.CategoryObj.Id!=0 ? "Update" : "Create")</button>
+                                <button type="submit" class="btn btn-primary form-control">@(Model.PizzaCrustFlavorObj.Id!=0 ? "Update" : "Create")</button>
                             </div>
                             <div class="col-6">
                                 <a asp-page="./Index" class="btn btn-success form-control">Back to List</a>
@@ -52,5 +54,3 @@
     </div>
 
 </form>
-
-
