--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                                 <a class="dropdown-item text-white" asp-page="/Admin/ToppingType/Index">Add Topping Types</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/CrustFlavor/Index">Add Crust Flavors</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/CrustType/Index">Add Crust Types</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/PizzaSize/Index">Add Pizza Sizes</a>
                             </div>
                            
                     
