++PizzaType Controller,VM,Index,Upsert, js

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                                 <a class="dropdown-item text-white" asp-page="/Admin/CrustFlavor/Index">Add Crust Flavors</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/CrustType/Index">Add Crust Types</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/PizzaSize/Index">Add Pizza Sizes</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/PizzaType/Index">Add Pizzas</a>
                             </div>
                            
                     
