--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaType/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaType/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="border backgroundWhite container">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary font-weight-light">Menu Item List</h2>
+            <h2 class="text-primary font-weight-light">Speacial Pizza List</h2>
         </div>
         <div class="col-6 text-right">
             <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
@@ -19,11 +19,24 @@
                 <th>Description</th>
                 <th>Price</th>
                 <th>Category</th>
+                <th>Pizza Type</th>
+                <th>Topping 1</th>
+                <th>Topping 2</th>
+                <th>Topping 3</th>
+                <th>Topping 4</th>
+                <th>Topping 5</th>
+                <th>Topping 6</th>
+                <th>Topping 7</th>
+                <th>Topping 8</th>
                 <th></th>
             </tr>
         </thead>
     </table>
 </div>
+
+
+
+
 
 @section Scripts{
     <script src="~/js/pizzaType.js"></script>
