--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -14,10 +14,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary box-shadow mb-3">
+       
+        <nav class="navbar navbar-clip navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand text-white" asp-area="" asp-page="/Index">PizzaPros</a>
+                <a asp-area="" asp-page="/Index" class="navbar-brand">
+                    <img src="~/images/PizzaProLogo2.png" alt="CoolBrand">
+                </a>
+                @*<a class="navbar-brand text-white" asp-area="" asp-page="/Index">PizzaPros</a>*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,14 +44,14 @@
                                 <a class="dropdown-item text-white" asp-page="/Admin/PizzaSize/Index">Add Pizza Sizes</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/PizzaType/Index">Add Pizzas</a>
                             </div>
-                           
-                    
+
+
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        </div>
+        
     </header>
     <div class="container">
         <main role="main" class="pb-3">
