--- a/PizzaPros/PizzaPros/wwwroot/css/site.css
+++ b/PizzaPros/PizzaPros/wwwroot/css/site.css
@@ -1,73 +1,92 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+.navbar {
+    background: rgb(236,99,99);
+    background: linear-gradient(0deg, rgba(236,99,99,1) 0%, rgba(130,29,26,1) 78%);
+    height: 10vh;
 }
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+   
+}
+
+    a.navbar-brand > img {
+        max-width: 100%;
+        height: 100px;
+    }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
+}
+
+.rotated {
+    transform: rotate(-25deg); /* Equal to rotateZ(45deg) */
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 a.navbar-brand {
@@ -174,13 +193,112 @@ body {
         margin: 0 0 15px;
     }
 
+/*button customization*/
+
+.btn-product {
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 22px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    display: inline-block;
+}
+
+.red {
+    color: #e74c3c;
+    border: 2px #e74c3c solid;
+}
+
+    .red:hover {
+        color: #fff;
+        background-color: #e74c3c;
+    }
+
+/*Multi product carousel override*/
+
+
+@media (max-width: 768px) {
+    .carousel-inner .carousel-item > div {
+        display: none;
+    }
+
+        .carousel-inner .carousel-item > div:first-child {
+            display: block;
+        }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
+}
+
+/* display 3 */
+@media (min-width: 768px) {
+
+    .carousel-inner .carousel-item-right.active,
+    .carousel-inner .carousel-item-next {
+        transform: translateX(33.333%);
+    }
+
+    .carousel-inner .carousel-item-left.active,
+    .carousel-inner .carousel-item-prev {
+        transform: translateX(-33.333%);
+    }
+}
+
+.carousel-inner .carousel-item-right,
+.carousel-inner .carousel-item-left {
+    transform: translateX(0);
+}
+
+
+
+.carousel-control-next {
+    right: -80px !important;
+}
+
+.carousel-control-prev {
+    left: -80px !important;
+}
+
+
+
+/*Radio button customization*/
+
+
+
+
+.card-product {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    border: 1px solid #e6e6e6;
+    border-radius: 1px;
+    width: 100%;
+}
+
+.card-img-top {
+    max-width: 100% !important;
+    height: auto !important;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    clip-path: polygon(0 0, 100% 0, 100% 69%, 0 88%);
+}
+
+.card-title {
+    line-height: 1;
+}
 
 
 .form-control, .btn {
     min-height: 38px;
     border-radius: 2px;
 }
-
 
 
 
@@ -213,37 +331,41 @@ body {
             z-index: 2;
         }
 
-    #logreg-forms .form-signin input[type="email"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-    }
+.form-control:focus {
+    z-index: 2;
+}
 
-    #logreg-forms .form-signin input[type="password"] {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
+#logreg-forms .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
 
-    #logreg-forms .social-login {
-        width: 390px;
-        margin: 0 auto;
-        margin-bottom: 14px;
-    }
+#logreg-forms .form-signin input[type="password"] {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
 
-    #logreg-forms .social-btn {
-        font-weight: 100;
-        color: white;
-        width: 190px;
-        font-size: 0.9rem;
-    }
+#logreg-forms .social-login {
+    width: 390px;
+    margin: 0 auto;
+    margin-bottom: 14px;
+}
 
-    #logreg-forms a {
-        display: block;
-        padding-top: 10px;
-        color: lightseagreen;
-    }
+#logreg-forms .social-btn {
+    font-weight: 100;
+    color: white;
+    width: 190px;
+    font-size: 0.9rem;
+}
 
-#logreg-form .lines {
+#logreg-forms a {
+    display: block;
+    padding-top: 10px;
+    color: lightseagreen;
+}
+
+#logreg-forms .lines {
     width: 200px;
     border: 1px solid red;
 }
@@ -257,7 +379,19 @@ body {
     background-color: #3C589C;
 }
 
+.facebook-btn {
+    background-color: #3C589C;
+}
+
+    .facebook-btn:hover, .microsoft-btn:hover {
+        color: #000000;
+    }
+
 #logreg-forms .microsoft-btn {
+    background-color: #2672ec;
+}
+
+.microsoft-btn {
     background-color: #2672ec;
 }
 
@@ -278,13 +412,28 @@ body {
     margin: 0 auto;
 }
 
-/*additional css added */
-table tr td:first-child {
-    text-transform: capitalize;
+#instructions {
+    height: 0px;
+    width: 95px;
+    position: fixed;
+    right: 0;
+    top: 20%;
+    z-index: 1000;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
-
-table tr td:nth-child(2)::first-letter {
-    text-transform: capitalize;
-}
-
+    #instructions button {
+        display: block;
+        width: 50px;
+        text-align: center;
+        padding: 8px 15px;
+        font-size: 20px;
+        border-bottom: solid 1px #333;
+        border-left: solid 1px #333;
+        border-right: solid 1px #fff;
+        text-decoration: none;
+    }
