Updated Upsert pages and Customer Home Page, ++slider.js for carousel

--- a/PizzaPros/PizzaPros/Pages/Admin/ToppingType/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/ToppingType/Upsert.cshtml
@@ -12,7 +12,7 @@
                 <input type="hidden" asp-for="ToppingTypeObj.Id" />
             }
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary font-weight-light">@(Model.ToppingTypeObj.Id!=0 ? "Update " : "Create ")Topping Type</h2>
+                <h2 class="text-primary font-weight-light">@(Model.ToppingTypeObj.Id!=0 ? "Update " : "Create New ")Topping Type</h2>
             </div>
 
             <div class="col-8 pt-3">
