--- a/PizzaPros/PizzaPros/wwwroot/css/site.css
+++ b/PizzaPros/PizzaPros/wwwroot/css/site.css
@@ -221,7 +221,6 @@ body {
 
 /*Multi product carousel override*/
 
-
 @media (max-width: 768px) {
     .carousel-inner .carousel-item > div {
         display: none;
@@ -236,6 +235,7 @@ body {
 .carousel-inner .carousel-item-next,
 .carousel-inner .carousel-item-prev {
     display: flex;
+
 }
 
 /* display 3 */
@@ -257,22 +257,47 @@ body {
     transform: translateX(0);
 }
 
+.carousel-fade .carousel-item {
+    opacity: 0;
+    transition-duration: .6s;
+    transition-property: opacity;
+}
 
+    .carousel-fade .carousel-item.active,
+    .carousel-fade .carousel-item-next.carousel-item-left,
+    .carousel-fade .carousel-item-prev.carousel-item-right {
+        opacity: 1;
+    }
+
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-right {
+    opacity: 0;
+}
+
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item.active,
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-prev {
+    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
+}
 
 .carousel-control-next {
-    right: -80px !important;
+    right: -10px !important;
 }
 
 .carousel-control-prev {
-    left: -80px !important;
+    left: -10px !important;
+}
+
+.card-block {
+   white-space: normal;
 }
 
 
 
 /*Radio button customization*/
-
-
-
 
 .card-product {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
@@ -301,7 +326,9 @@ body {
 }
 
 
-
+.card {
+    max-width: 100%;
+}
 
 
 #logreg-forms {
