--- a/PizzaPros/PizzaPros/Pages/Admin/CrustType/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/CrustType/Upsert.cshtml
@@ -11,7 +11,7 @@
                 <input type="hidden" asp-for="PizzaCrustTypeObj.Id" />
             }
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary font-weight-light">@(Model.PizzaCrustTypeObj.Id!=0 ? "Update " : "Create ")Crust Type</h2>
+                <h2 class="text-primary font-weight-light">@(Model.PizzaCrustTypeObj.Id!=0 ? "Update " : "Create New ")Crust Type</h2>
             </div>
 
             <div class="col-8 pt-3">
