--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="border backgroundWhite container">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary font-weight-light">Crust Flavor List</h2>
+            <h2 class="text-primary font-weight-light">Pizza Sizes List</h2>
         </div>
         <div class="col-6 text-right">
             <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
