--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Upsert.cshtml
@@ -11,7 +11,7 @@
                 <input type="hidden" asp-for="PizzaSizeObj.Id" />
             }
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary font-weight-light">@(Model.PizzaSizeObj.Id!=0 ? "Update " : "Create ")Crust Type</h2>
+                <h2 class="text-primary font-weight-light">@(Model.PizzaSizeObj.Id!=0 ? "Update " : "Create New ")Pizza Size</h2>
             </div>
 
             <div class="col-8 pt-3">
