--- a/PizzaPros/PizzaPros/Pages/Admin/Toppings/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Toppings/Upsert.cshtml
@@ -14,7 +14,7 @@
                 <input type="hidden" asp-for="ToppingsItemObj.Toppings.Id" />
             }
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary font-weight-light">@(Model.ToppingsItemObj.Toppings.Id!=0 ? "Update " : "Create ")Topping Items</h2>
+                <h2 class="text-primary font-weight-light">@(Model.ToppingsItemObj.Toppings.Id!=0 ? "Update " : "Create New ")Topping Item</h2>
             </div>
 
             <div class="col-8 pt-3">
