--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                                 <a class="dropdown-item text-white" asp-page="/Admin/CrustType/Index">Add Crust Types</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/PizzaSize/Index">Add Pizza Sizes</a>
                                 <a class="dropdown-item text-white" asp-page="/Admin/PizzaType/Index">Add Pizzas</a>
-                                <a class="dropdown-item text-white" asp-page="/Admin/PizzaType/Index">Add Users</a>
+                                <a class="dropdown-item text-white" asp-page="/Admin/User/Index">Add Users</a>
                             </div>
 
 
