--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
@@ -1,26 +1,36 @@
 ﻿@page
+@using PizzaPros.Utility
 
-
-
-<div class="border backgroundWhite container">
-    <div class="row">
-        <div class="col-6">
-            <h2 class="text-primary font-weight-light">Pizza Sizes List</h2>
+@if (User.IsInRole(SD.ManagerRole))
+{
+    <div class="border backgroundWhite container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="text-primary font-weight-light">Pizza Sizes List</h2>
+            </div>
+            <div class="col-6 text-right">
+                <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
+            </div>
         </div>
-        <div class="col-6 text-right">
-            <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
-        </div>
+        <br />
+        <table id="DT-load" class="table table-striped table-bordered " style="width:100%">
+            <thead>
+                <tr>
+                    <th>Pizza Sizes</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
     </div>
-    <br />
-    <table id="DT-load" class="table table-striped table-bordered " style="width:100%">
-        <thead>
-            <tr>
-                <th>Pizza Sizes</th>
-                <th></th>
-            </tr>
-        </thead>
-    </table>
-</div>
+}
+else
+{
+    <h1 class="text-danger">
+        Access denied
+
+    </h1>
+    <p class="text-danger">You do not have access to this resource.</p>
+}
 
 @section Scripts{
     <script src="~/js/pizzaSize.js"></script>
