--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaType/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaType/Index.cshtml
@@ -1,38 +1,50 @@
 ﻿@page
+@using PizzaPros.Utility
 
 
-
-<div class="border backgroundWhite container">
-    <div class="row">
-        <div class="col-6">
-            <h2 class="text-primary font-weight-light">Speacial Pizza List</h2>
+@if (User.IsInRole(SD.ManagerRole))
+{
+    <div class="border backgroundWhite container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="text-primary font-weight-light">Speacial Pizza List</h2>
+            </div>
+            <div class="col-6 text-right">
+                <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
+            </div>
         </div>
-        <div class="col-6 text-right">
-            <a asp-page="Upsert" class="btn btn-primary"><i class="far fa-plus-square"> &nbsp; Create New</i></a>
-        </div>
+        <br />
+        <table id="DT-load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th>Category</th>
+                    <th>Pizza Type</th>
+                    <th>Topping 1</th>
+                    <th>Topping 2</th>
+                    <th>Topping 3</th>
+                    <th>Topping 4</th>
+                    <th>Topping 5</th>
+                    <th>Topping 6</th>
+                    <th>Topping 7</th>
+                    <th>Topping 8</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
     </div>
-    <br />
-    <table id="DT-load" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Category</th>
-                <th>Pizza Type</th>
-                <th>Topping 1</th>
-                <th>Topping 2</th>
-                <th>Topping 3</th>
-                <th>Topping 4</th>
-                <th>Topping 5</th>
-                <th>Topping 6</th>
-                <th>Topping 7</th>
-                <th>Topping 8</th>
-                <th></th>
-            </tr>
-        </thead>
-    </table>
-</div>
+}
+else
+{
+    <h1 class="text-danger">
+        Access denied
+
+    </h1>
+    <p class="text-danger">You do not have access to this resource.</p>
+}
+
 
 
 
